--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>agile_cards</title>
+  <title>Agile Cards</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
